# mc.py

./: .flake8  .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  todo.md
PhraseGenerator/: index.html
PhraseGenerator/formatters/: index.html
PhraseGenerator/validators/: index.html
docs/: README.md  index.md
docs/PhraseGenerator/: formatters.md  index.md  validators.md
examples/: README.md  beginning.py  built-in_formatter.py  built-in_validator.py  builtin-formatters.py  builtin-validators.py  combine.py  combined_built-in_validators.py  combined_custom_validators.py  custom-formatters.py  custom-validators.py  custom_formatter.py  custom_validator.py  example1.py  example2.py  formatters.py  full.py  generate_phrase_or_none.py  generate_phrases.py  generator.json  load_samples.py  load_state.py  order.py  samples.json  samples.txt  save_state.py  simple.py  validators.py
mc/: __init__.py  core.py  exceptions.py  formatters.py  markov_chain.py  markov_model.py  phrase_generator.py  types.py  util.py  validators.py
mc/builtin/: __init__.py  formatters.py  validators.py
search/: search_index.json
МС/: markov_chain.py
