[tool.poetry]
name = "mc.py"
version = "4.0.0"
description = "Python package which provides you a simple way to generate phrases using Markov chains"
authors = ["jieggii <jieggii.contact@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jieggii/mc.py"
repository = "https://github.com/jieggii/mc.py"
keywords = [
    "markov",
    "generator"
]
packages = [{include = "mc"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.11b1"
flake8 = "^4.0.1"
mkdocs = "^1.2.3"
mkdocs-material = "^7.3.6"

[tool.black]
line-length = 99
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
